// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PromptListItem rendering tests PromptListItem - isSelected false - rendered test 1`] = `
<div>
  <a
    data-testid="mock-link"
    href="/prompts/334db648-f300-4284-8149-075ff465d751"
  >
    <div
      class="group relative rounded-lg cursor-pointer transition-all duration-200 border bg-white border-slate-200/60 hover:border-slate-300 hover:shadow-md"
      data-testid="prompt-list-item"
    >
      <div
        class="flex items-start gap-3 px-4 py-3.5"
      >
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-2 mb-2"
          >
            <h3
              class="font-semibold text-sm text-slate-900 truncate flex-1 group-hover:text-blue-700 transition-colors"
            >
              title 1
            </h3>
          </div>
          <div
            class="flex flex-wrap gap-1.5 mb-2.5"
            data-testid="categories"
          >
            <span
              class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
            >
              category 0
            </span>
            <span
              class="text-xs px-2 py-0.5 bg-gradient-to-r from-slate-100 to-slate-50 text-slate-700 rounded-md font-medium border border-slate-200/50"
            >
              category 1
            </span>
            <span
              class="text-xs px-2 py-0.5 text-slate-500 font-medium"
            >
              +
              1
               mehr
            </span>
          </div>
          <div
            class="flex justify-end items-center gap-2.5 text-xs text-slate-500"
          >
            <span
              class="inline-flex items-center gap-1.5 truncate"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-clock w-3.5 h-3.5 flex-shrink-0 text-slate-400"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 6v6l4 2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
              <span
                class="font-medium"
              >
                Sa., 27. Sept. 2025
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`PromptListItem rendering tests PromptListItem - isSelected true - rendered test 1`] = `
<div>
  <a
    data-testid="mock-link"
    href="/prompts/334db648-f300-4284-8149-075ff465d751"
  >
    <div
      class="group relative rounded-lg cursor-pointer transition-all duration-200 border bg-blue-50/60 border-blue-200 shadow-md"
      data-testid="prompt-list-item"
    >
      <div
        class="absolute left-0 top-0 bottom-0 w-1 bg-gradient-to-b from-blue-500 to-blue-600 rounded-l-lg"
      />
      <div
        class="flex items-start gap-3 px-4 py-3.5"
      >
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-2 mb-2"
          >
            <h3
              class="font-semibold text-sm text-slate-900 truncate flex-1 group-hover:text-blue-700 transition-colors"
            >
              title 1
            </h3>
          </div>
          <div
            class="flex justify-end items-center gap-2.5 text-xs text-slate-500"
          >
            <span
              class="inline-flex items-center gap-1.5 truncate"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-clock w-3.5 h-3.5 flex-shrink-0 text-slate-400"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 6v6l4 2"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
              <span
                class="font-medium"
              >
                Sa., 27. Sept. 2025
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;
